@@ -5,6 +5,7 @@
   * Added ability to find TextField by :title
   * Added ability to find Form by :action
   * Added ability to find Image by :alt
+  * Added ability to find Image by :src
 
 === Version 0.5.3
 * Enhancements
